--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "@types/node": "^20.8.2",
     "concurrently": "^8.2.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
