--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/node": "^20.8.2",
     "concurrently": "^8.2.1",
     "typescript": "^5.2.2"
