--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "graphql": "^16.8.1"
   }
 }
