--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@apollo/server": "^4.9.4",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "graphql-scalars": "^1.22.2",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1"
   }
 }
