--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.4",
+    "apollo-server-express": "^3.12.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.2",
