--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "graphql": "^15.3.0",
     "graphql-scalars": "^1.22.2",
+    "mongoose": "^7.5.4",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   }
