--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.12.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
     "graphql-scalars": "^1.22.2",
