--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^11.5.0",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
