--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@typegoose/typegoose": "^11.5.0",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
     "graphql-scalars": "^1.22.2",
