--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^11.5.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
