--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,13 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^11.5.0",
+    "@types/config": "^3.3.1",
     "@types/cookie-parser": "^1.4.4",
     "@types/jsonwebtoken": "^9.0.3",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
+    "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "graphql": "^15.3.0",
