--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "18.15.0",
+    "npm": "9.5.0"
+  },
   "dependencies": {
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1"
