--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start:build": "tsc -w",
     "start:run": "nodemon build/index.js",
@@ -12,17 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@typegoose/typegoose": "^11.5.0",
-    "@types/bcrypt": "^5.0.1",
-    "@types/config": "^3.3.1",
-    "@types/cookie-parser": "^1.4.4",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/express": "^4.17.18",
-    "@types/node": "^20.8.2",
-    "concurrently": "^8.2.1",
+    "concurrently": "^8.2.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^11.6.0",
+    "@types/bcrypt": "^5.0.1",
+    "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/node": "^20.8.7",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
