--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,12 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@typegoose/typegoose": "^11.6.0",
+    "@typegoose/typegoose": "^11.5.0",
     "@types/bcrypt": "^5.0.1",
-    "@types/express": "^4.17.20",
-    "@types/jsonwebtoken": "^9.0.4",
-    "@types/node": "^20.8.7",
+    "@types/express": "^4.17.18",
+    "@types/express-serve-static-core": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "^20.8.2",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
@@ -28,7 +29,7 @@
     "graphql": "^15.3.0",
     "graphql-scalars": "^1.22.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.4",
+    "mongoose": "^7.6.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   }
