--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
     "postinstall": "npm run build:server && npm run build:client",
-    "develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\""
+    "develop": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\""
   },
   "keywords": [],
   "author": "",
