--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node build/index.js",
     "start:build": "tsc -w",
     "start:run": "nodemon build/index.js",
-    "start:dev": "concurrently npm:start:*"
+    "dev": "concurrently npm:start:*"
   },
   "keywords": [],
   "author": "",
