--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server/build/index.js",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
-    "postinstall": "npm run build:server && npm run build:client",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
+    "postinstall": "npm run build:client && npm run build:server",
     "develop": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\""
   },
   "keywords": [],
