--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "vite": "^4.5.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -40,7 +41,6 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.5.0"
+    "typescript": "^5.0.2"
   }
 }
