--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -36,7 +37,6 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
     "concurrently": "^8.2.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
