--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build:server": "tsc",
+    "build": "tsc",
     "start:build": "tsc -w",
     "start:run": "nodemon build/index.js",
     "dev": "concurrently npm:start:*"
